[project]
name = "fileloader"
version = "0.0.4"
description = "Load common JSON formats quickly, CSV too."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["json", "jsonl", "ndjson", "gzip", "fileloader"]
authors = [
  {email = "scott@invisiblethreat.ca"},
  {name = "Scott Walsh"}
]
maintainers = [
  {email = "scott@invisiblethreat.ca"},
  {name = "Scott Walsh"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
homepage = "https://github.com/invisiblethreat/fileloader"
documentation = "https://github.com/invisiblethreat/fileloader/README.md"
repository = "https://github.com/invisiblethreat/fileloader"
